--- a/style.css
+++ b/style.css
@@ -1,74 +1,78 @@
 body {
-    background-color: #deb887; 
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 100vh;
-    margin: 0;
-    font-family: Arial, sans-serif;
-  }
-  
-  .box {
-    background-color: #fdf5e6; 
-    padding: 40px;
-    border-radius: 10px;
-    box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1); 
-    display: flex;
-    flex-direction: column;
-    gap: 15px;
-    align-items: center;
-    width: 300px;
-  }
-  
-  .shuffle-button, #validate-btn {
-    padding: 10px 20px;
-    background-color: #4caf50; 
-    color: white;
-    border: none;
-    border-radius: 5px;
-    cursor: pointer;
-    transition: background-color 0.3s ease;
-  }
-  
-  .shuffle-button:hover, #validate-btn:hover {
-    background-color: #45a049;
-  }
-  
-  .info-display {
-    border: 2px solid #000; 
-    background-color: #f0f8ff;
-    padding: 10px;
-    width: 100%;
-    height: 40px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    font-weight: bold;
-    font-size: 18px;
-    color: #333;
-    border-radius: 5px;
-  }
-  
-  label {
-    font-weight: bold;
-    color: #333;
-    margin-bottom: 5px;
-  }
-  
-  input[type="text"] {
-    padding: 10px;
-    border: 1px solid #ccc;
-    border-radius: 5px;
-    width: 100%;
-    font-size: 16px;
-  }
-  
-  input[type="text"]:focus {
-    border-color: #4caf50;
-    outline: none;
-  }
-  
-  button {
-    width: 100%;
-  }
-  
+  background-color: #deb887;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  height: 100vh;
+  margin: 0;
+  font-family: Arial, sans-serif;
+}
+
+.box {
+  background-color: #fdf5e6;
+  padding: 40px;
+  border-radius: 10px;
+  box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
+  display: flex;
+  flex-direction: column;
+  gap: 15px;
+  align-items: center;
+  width: 300px;
+}
+
+.shuffle-button,
+#validate-btn {
+  padding: 10px 20px;
+  background-color: #4caf50;
+  color: white;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+}
+
+.shuffle-button:hover,
+#validate-btn:hover {
+  background-color: #45a049;
+}
+
+.info-display {
+  overflow: hidden;
+  border: 2px solid #000;
+  background-color: #f0f8ff;
+  padding: 10px;
+  width: 100%;
+  height: 40px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-bottom: 50px;
+  font-weight: bold;
+  font-size: 18px;
+  color: #333;
+  border-radius: 5px;
+}
+
+label {
+  font-weight: bold;
+  color: #333;
+  margin-bottom: 5px;
+}
+
+input[type="text"] {
+  padding: 10px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  width: 100%;
+  font-size: 16px;
+}
+
+input[type="text"]:focus {
+  border-color: #4caf50;
+  outline: none;
+}
+
+button {
+  width: 100%;
+}
