removing trash function and update dom state

--- a/style.css
+++ b/style.css
@@ -25,8 +25,7 @@ body {
   width: 60%;
 }
 
-.shuffle-button,
-#validate-btn {
+#play-button {
   padding: 10px 20px;
   background-color: #4caf50;
   color: white;
@@ -36,17 +35,15 @@ body {
   transition: background-color 0.3s ease;
 }
 
-.shuffle-button:hover,
-#validate-btn:hover {
+#play-button:hover {
   background-color: #45a049;
 }
 
 .info-display {
-  overflow: hidden;
   border: 2px solid #000;
   background-color: #f0f8ff;
   padding: 10px;
-  width: 100%;
+  width: 500px;
   height: 40px;
   display: flex;
   justify-content: center;
